...
                        android:layout_width="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:id="@+id/editTitle"
                            android:hint="Title"
                            android:layout_height="wrap_content">

                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>
...
                        android:layout_width="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:id="@+id/editRent"
                            android:hint="Rent Price"
                            android:inputType="number"
                            android:layout_height="wrap_content">

                        </com.google.android.material.textfield.TextInputEditText>

...
                        android:layout_width="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:id="@+id/editSize"
                            android:hint="Property Size(sqft)"
                            android:inputType="number"
                            android:layout_height="wrap_content">

                        </com.google.android.material.textfield.TextInputEditText>

...
                        android:layout_width="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:id="@+id/editDuration"
                            android:hint="Agreement Duration(Months)"
                            android:inputType="number"
                            android:layout_height="wrap_content">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>
...
                        android:layout_width="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:id="@+id/editBedroomCount"
                            android:hint="Bedroom(s)"
                            android:inputType="number"
                            android:layout_height="wrap_content">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>
...
                        android:layout_width="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:id="@+id/editBathroomCount"
                            android:hint="Bathroom(s)"
                            android:inputType="number"
                            android:layout_height="wrap_content">

                        </com.google.android.material.textfield.TextInputEditText>

...
                        android:text="Utilities/Amenities Included"
                        />

                    <CheckBox
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/hydroId"
                        android:layout_margin="10dp"
                        android:layout_below="@id/utilitiesId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hydro"
                        app:useMaterialThemeColors="false"/>
...
