...
            app:layout_constraintTop_toBottomOf="@id/toolbar">

        </androidx.viewpager.widget.ViewPager>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_circle_black_24dp"
            app:layout_constraintBottom_toTopOf="@id/tabLayout"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="32dp"
...
